[gd_scene load_steps=6 format=3 uid="uid://dag3mwh2yrajj"]

[ext_resource type="Script" path="res://scripts/barrel.gd" id="1_r5ub1"]
[ext_resource type="Texture2D" uid="uid://bvbfg4q1341ug" path="res://assets/barrel.png" id="2_7fnjm"]
[ext_resource type="PackedScene" uid="uid://ckp4se861lfjy" path="res://assets/explosion_particle.tscn" id="3_wgwxj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4sy0"]
size = Vector2(19.3333, 25.8333)

[sub_resource type="CircleShape2D" id="CircleShape2D_u4u7l"]
radius = 83.35

[node name="Barrel" type="StaticBody2D" groups=["One-Shot"]]
scale = Vector2(1.2, 1.2)
collision_layer = 9
collision_mask = 9
script = ExtResource("1_r5ub1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.33333, 0.416666)
shape = SubResource("RectangleShape2D_k4sy0")

[node name="Barrel2D" type="Sprite2D" parent="."]
position = Vector2(-1.66667, 0)
texture = ExtResource("2_7fnjm")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 20
collision_mask = 20
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u4u7l")
debug_color = Color(0.850522, 0.351478, 0.334546, 0.42)

[node name="GPUParticles2D" parent="Area2D" instance=ExtResource("3_wgwxj")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
